<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- Bottom Navigation Fragments -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.ptithcm.manga.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_manga_detail"
            app:destination="@id/nav_manga_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_genre"
        android:name="com.ptithcm.manga.ui.genre.GenreFragment"
        android:label="@string/nav_genre"
        tools:layout="@layout/fragment_genre">
        <action
            android:id="@+id/action_genre_to_manga_detail"
            app:destination="@id/nav_manga_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.ptithcm.manga.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_manga_detail"
            app:destination="@id/nav_manga_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_library"
        android:name="com.ptithcm.manga.ui.library.LibraryFragment"
        android:label="@string/nav_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_library_to_manga_detail"
            app:destination="@id/nav_manga_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ptithcm.manga.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_edit"
            app:destination="@id/nav_edit_profile" />
        <action
            android:id="@+id/action_profile_to_change_password"
            app:destination="@id/nav_change_password" />
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_profile_to_my_mangas"
            app:destination="@id/nav_my_mangas" />
        <action
            android:id="@+id/action_profile_to_submit_manga"
            app:destination="@id/nav_submit_manga" />
    </fragment>

    <!-- Auth Fragments -->
    <fragment
        android:id="@+id/nav_login"
        android:name="com.ptithcm.manga.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/nav_register" />
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="com.ptithcm.manga.ui.auth.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_register"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Sub Profile Fragments -->
    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.ptithcm.manga.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.ptithcm.manga.ui.profile.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />

    <!-- Manga Detail -->
    <fragment
        android:id="@+id/nav_manga_detail"
        android:name="com.ptithcm.manga.ui.manga.MangaDetailFragment"
        android:label="@string/manga_detail"
        tools:layout="@layout/fragment_manga_detail">
        <argument
            android:name="mangaSlug"
            app:argType="string" />
        <argument
            android:name="mangaId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

    <!-- User Content Management -->
    <fragment
        android:id="@+id/nav_my_mangas"
        android:name="com.ptithcm.manga.ui.manga.MyMangasFragment"
        android:label="@string/my_mangas"
        tools:layout="@layout/fragment_my_mangas">
        <action
            android:id="@+id/action_my_mangas_to_submit"
            app:destination="@id/nav_submit_manga" />
        <action
            android:id="@+id/action_my_mangas_to_manga_detail"
            app:destination="@id/nav_manga_detail" />
        <action
            android:id="@+id/action_my_mangas_to_chapter_form"
            app:destination="@id/nav_admin_chapter_form" />
        <action
            android:id="@+id/action_my_mangas_to_edit_manga"
            app:destination="@id/nav_submit_manga" />
    </fragment>

    <fragment
        android:id="@+id/nav_submit_manga"
        android:name="com.ptithcm.manga.ui.manga.SubmitMangaFragment"
        android:label="@string/submit_manga"
        tools:layout="@layout/fragment_submit_manga">
        <action
            android:id="@+id/action_submit_to_my_mangas"
            app:destination="@id/nav_my_mangas"
            app:popUpTo="@id/nav_my_mangas"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Admin Fragments -->
    <fragment
        android:id="@+id/nav_admin_dashboard"
        android:name="com.ptithcm.manga.ui.admin.AdminDashboardFragment"
        android:label="@string/admin_dashboard"
        tools:layout="@layout/fragment_admin_dashboard">
        <action
            android:id="@+id/action_admin_to_manga_list"
            app:destination="@id/nav_admin_manga_list" />
        <action
            android:id="@+id/action_admin_to_user_list"
            app:destination="@id/nav_admin_user_list" />
        <action
            android:id="@+id/action_admin_to_genre"
            app:destination="@id/nav_admin_genre" />
        <action
            android:id="@+id/action_admin_to_pending"
            app:destination="@id/nav_admin_pending" />
    </fragment>

    <fragment
        android:id="@+id/nav_admin_manga_list"
        android:name="com.ptithcm.manga.ui.admin.AdminMangaListFragment"
        android:label="@string/manage_manga"
        tools:layout="@layout/fragment_admin_manga_list">
        <action
            android:id="@+id/action_admin_manga_to_form"
            app:destination="@id/nav_admin_manga_form" />
        <action
            android:id="@+id/action_admin_manga_to_chapter_form"
            app:destination="@id/nav_admin_chapter_form" />
    </fragment>

    <fragment
        android:id="@+id/nav_admin_manga_form"
        android:name="com.ptithcm.manga.ui.admin.AdminMangaFormFragment"
        android:label="@string/add_manga"
        tools:layout="@layout/fragment_admin_manga_form" />

    <fragment
        android:id="@+id/nav_admin_chapter_form"
        android:name="com.ptithcm.manga.ui.admin.AdminChapterFormFragment"
        android:label="@string/add_chapter"
        tools:layout="@layout/fragment_admin_chapter_form" />

    <fragment
        android:id="@+id/nav_admin_user_list"
        android:name="com.ptithcm.manga.ui.admin.AdminUserListFragment"
        android:label="@string/manage_user"
        tools:layout="@layout/fragment_admin_user_list" />

    <fragment
        android:id="@+id/nav_admin_genre"
        android:name="com.ptithcm.manga.ui.admin.AdminGenreFragment"
        android:label="@string/manage_genre"
        tools:layout="@layout/fragment_admin_genre" />

    <fragment
        android:id="@+id/nav_admin_pending"
        android:name="com.ptithcm.manga.ui.admin.AdminPendingFragment"
        android:label="@string/pending_mangas"
        tools:layout="@layout/fragment_admin_pending" />

</navigation>
